--- a/tctlite.cabal
+++ b/tctlite.cabal
@@ -2,6 +2,7 @@ Name:               tct
 Version:            3.0
 Author:
   Martin Avanzini <martin.avanzini@uibk.ac.at>,
+  Andreas Kochesser <andreas.kochesser@uibk.ac.at>,
   Georg Moser <georg.moser@uibk.ac.at>,
   Michael Schaper <michael.schaper@uibk.ac.at>,
   Maria Schett <maria.schett@uibk.ac.at>
@@ -19,70 +20,88 @@ Description:
 cabal-version: >= 1.8
 build-type: Simple
 
-Executable tct
- main-is: Tct/Main.hs
- build-depends:
-  base == 4.*,
-  async == 2.*,
-  old-time == 1.1.*,
-  text == 1.1.*,
-  bytestring == 0.10.*,
-  containers >= 0.5 && < 0.6,
-  mtl >= 2.1 && < 2.2,
-  dyre == 0.8.*,
-  xmlgen >= 0.6 && < 0.7,
-  ho-rewriting >= 0.1 && < 0.2,
-  ansi-wl-pprint >= 0.6 && < 0.7,
-  parsec >= 3 && < 3.2
- hs-source-dirs: src
- ghc-options:
-   -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
- extensions: 
-  GeneralizedNewtypeDeriving,
-  TypeFamilies,
-  ConstraintKinds, 
-  GADTs, 
-  FlexibleContexts, 
-  MultiParamTypeClasses,
-  TypeSynonymInstances, 
-  DeriveFunctor, 
-  DeriveFoldable, 
-  DeriveTraversable
+Executable tctl
+  main-is: Tct/Main.hs
+  build-depends:
+    ansi-wl-pprint >= 0.6 && < 0.7,
+    async          == 2.*,
+    base           == 4.*,
+    bytestring     == 0.10.*,
+    containers     >= 0.5 && < 0.6,
+    directory      == 1.2.*,
+    dyre           == 0.8.*,
+    filepath       == 1.3.*,
+    mtl            >= 2.1 && < 2.2,
+    old-time       == 1.1.*,
+    parsec         >= 3 && < 3.2,
+    text           == 1.1.*,
+    xmlgen         >= 0.6 && < 0.7,
+    void           == 0.6.*,
 
-Library
- exposed-modules:
-  Tct.Core
-  Tct.Certificate
-  Tct.SemiRing
-  Tct.Xml
-  Tct.Pretty
-  Tct.Problem
-  Tct.Processors.Combinators
-  Tct.Core.Options
+    smtlib         == 0.*,
+    term-rewriting == 0.*
+  hs-source-dirs: src
+  ghc-options:
+    -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
+  extensions: 
+    GeneralizedNewtypeDeriving,
+    TypeFamilies,
+    ConstraintKinds, 
+    GADTs, 
+    FlexibleContexts, 
+    MultiParamTypeClasses,
+    TypeSynonymInstances, 
+    DeriveFunctor, 
+    DeriveFoldable, 
+    DeriveTraversable
 
- build-depends:
-  base == 4.*,
-  async == 2.*,
-  old-time == 1.1.*,
-  text == 1.1.*,
-  bytestring == 0.10.*,
-  containers >= 0.5 && < 0.6,
-  mtl >= 2.1 && < 2.2,
-  xmlgen >= 0.6 && < 0.7,
-  ho-rewriting >= 0.1 && < 0.2,
-  ansi-wl-pprint >= 0.6 && < 0.7,
-  parsec >= 3 && < 3.2
- hs-source-dirs: src
- ghc-options:
-   -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
- extensions: 
-  GeneralizedNewtypeDeriving,
-  TypeFamilies,
-  ConstraintKinds, 
-  GADTs, 
-  FlexibleContexts, 
-  MultiParamTypeClasses, 
-  TypeSynonymInstances,
-  DeriveFunctor, 
-  DeriveFoldable, 
-  DeriveTraversable
+-- Library
+--   exposed-modules:
+--     Tct
+--     Tct.Core
+--     Tct.Core.Certificate
+--     Tct.Core.Forks
+--     Tct.Core.Processor
+--     Tct.Core.ProofTree
+--     Tct.Core.Strategy
+--     Tct.Core.TctM
+--     Tct.Itrs
+--     Tct.Main
+--     Tct.Options
+--     Tct.Pretty
+--     Tct.Processors.Combinators
+--     Tct.SemiRing
+--     Tct.Trs
+--     Tct.Xml
+--   build-depends:
+--     ansi-wl-pprint >= 0.6 && < 0.7,
+--     async          == 2.*,
+--     base           == 4.*,
+--     bytestring     == 0.10.*,
+--     containers     >= 0.5 && < 0.6,
+--     directory      == 1.2.*,
+--     dyre           == 0.8.*,
+--     filepath       == 1.3.*,
+--     mtl            >= 2.1 && < 2.2,
+--     old-time       == 1.1.*,
+--     parsec         >= 3 && < 3.2,
+--     text           == 1.1.*,
+--     xmlgen         >= 0.6 && < 0.7,
+--     void           == 0.6.*,
+-- 
+--     smtlib         == 0.*,
+--     term-rewriting == 0.*
+--   hs-source-dirs: src
+--   ghc-options:
+--     -j -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
+--   extensions: 
+--     GeneralizedNewtypeDeriving,
+--     TypeFamilies,
+--     ConstraintKinds, 
+--     GADTs, 
+--     FlexibleContexts, 
+--     MultiParamTypeClasses, 
+--     TypeSynonymInstances,
+--     DeriveFunctor, 
+--     DeriveFoldable, 
+--     DeriveTraversable
