--- a/tctlite.cabal
+++ b/tctlite.cabal
@@ -21,7 +21,29 @@ cabal-version: >= 1.8
 build-type: Simple
 
 Executable tctl
-  main-is: Tct/Main.hs
+  hs-source-dirs: src-main
+  main-is: Main.hs
+  build-depends:
+    base == 4.*,
+    tct  == 3.*
+  ghc-options:
+    -j -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
+
+Library
+  exposed-modules:
+    Tct
+    Tct.Core
+    Tct.Core.Certificate
+    Tct.Core.Forks
+    Tct.Core.Processor
+    Tct.Core.ProofTree
+    Tct.Core.Strategy
+    Tct.Core.TctM
+    Tct.Options
+    Tct.Pretty
+    Tct.Processors.Combinators
+    Tct.SemiRing
+    Tct.Xml
   build-depends:
     ansi-wl-pprint >= 0.6 && < 0.7,
     async          == 2.*,
@@ -42,66 +64,16 @@ Executable tctl
     term-rewriting == 0.*
   hs-source-dirs: src
   ghc-options:
-    -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
+    -j -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
   extensions: 
     GeneralizedNewtypeDeriving,
     TypeFamilies,
     ConstraintKinds, 
     GADTs, 
     FlexibleContexts, 
-    MultiParamTypeClasses,
-    TypeSynonymInstances, 
+    MultiParamTypeClasses, 
+    TypeSynonymInstances,
+    DeriveDataTypeable,
     DeriveFunctor, 
     DeriveFoldable, 
     DeriveTraversable
-
--- Library
---   exposed-modules:
---     Tct
---     Tct.Core
---     Tct.Core.Certificate
---     Tct.Core.Forks
---     Tct.Core.Processor
---     Tct.Core.ProofTree
---     Tct.Core.Strategy
---     Tct.Core.TctM
---     Tct.Itrs
---     Tct.Main
---     Tct.Options
---     Tct.Pretty
---     Tct.Processors.Combinators
---     Tct.SemiRing
---     Tct.Trs
---     Tct.Xml
---   build-depends:
---     ansi-wl-pprint >= 0.6 && < 0.7,
---     async          == 2.*,
---     base           == 4.*,
---     bytestring     == 0.10.*,
---     containers     >= 0.5 && < 0.6,
---     directory      == 1.2.*,
---     dyre           == 0.8.*,
---     filepath       == 1.3.*,
---     mtl            >= 2.1 && < 2.2,
---     old-time       == 1.1.*,
---     parsec         >= 3 && < 3.2,
---     text           == 1.1.*,
---     xmlgen         >= 0.6 && < 0.7,
---     void           == 0.6.*,
--- 
---     smtlib         == 0.*,
---     term-rewriting == 0.*
---   hs-source-dirs: src
---   ghc-options:
---     -j -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
---   extensions: 
---     GeneralizedNewtypeDeriving,
---     TypeFamilies,
---     ConstraintKinds, 
---     GADTs, 
---     FlexibleContexts, 
---     MultiParamTypeClasses, 
---     TypeSynonymInstances,
---     DeriveFunctor, 
---     DeriveFoldable, 
---     DeriveTraversable
