--- a/tctlite.cabal
+++ b/tctlite.cabal
@@ -27,7 +27,7 @@ Executable tctl
     base == 4.*,
     tct  == 3.*
   ghc-options:
-    -j -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
+    -j -threaded -Wall -O -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
 
 Library
   exposed-modules:
@@ -45,26 +45,28 @@ Library
     Tct.SemiRing
     Tct.Xml
   build-depends:
-    ansi-wl-pprint >= 0.6 && < 0.7,
-    async          == 2.*,
-    base           == 4.*,
-    bytestring     == 0.10.*,
-    containers     >= 0.5 && < 0.6,
-    directory      == 1.2.*,
-    dyre           == 0.8.*,
-    filepath       == 1.3.*,
-    mtl            >= 2.1 && < 2.2,
-    old-time       == 1.1.*,
-    parsec         >= 3 && < 3.2,
-    text           == 1.1.*,
-    xmlgen         >= 0.6 && < 0.7,
-    void           == 0.6.*,
+    ansi-wl-pprint       >= 0.6 && < 0.7,
+    async                == 2.*,
+    base                 == 4.*,
+    bytestring           == 0.10.*,
+    containers           >= 0.5 && < 0.6,
+    directory            == 1.2.*,
+    dyre                 == 0.8.*,
+    filepath             == 1.3.*,
+    mtl                  >= 2.1 && < 2.2,
+    old-time             == 1.1.*,
+    optparse-applicative == 0.9.*,
+    parsec               >= 3 && < 3.2,
+    text                 == 1.1.*,
+    xmlgen               >= 0.6 && < 0.7,
+    void                 == 0.6.*,
+    rank1dynamic == 0.2.*,
 
     smtlib         == 0.*,
     term-rewriting == 0.*
   hs-source-dirs: src
   ghc-options:
-    -j -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
+    -j -threaded -Wall -O -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
   extensions: 
     GeneralizedNewtypeDeriving,
     TypeFamilies,
