--- a/tctlite.cabal
+++ b/tctlite.cabal
@@ -56,14 +56,10 @@ Library
     mtl                  >= 2.1 && < 2.2,
     old-time             == 1.1.*,
     optparse-applicative == 0.9.*,
-    parsec               >= 3 && < 3.2,
+    parsec               == 3.1.*,
     text                 == 1.1.*,
-    xmlgen               >= 0.6 && < 0.7,
-    void                 == 0.6.*,
-    rank1dynamic == 0.2.*,
-
-    smtlib         == 0.*,
-    term-rewriting == 0.*
+    xmlgen               >= 0.6 && < 0.7
+    
   hs-source-dirs: src
   ghc-options:
     -j -threaded -Wall -O -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
