--- a/tctlite.cabal
+++ b/tctlite.cabal
@@ -46,20 +46,20 @@ Executable tctl
 Library
   exposed-modules:
     Tct
+    Tct.Common.Error
+    Tct.Common.Options
+    Tct.Common.Parser
+    Tct.Common.Pretty
+    Tct.Common.Xml
     Tct.Core
     Tct.Core.Certificate
     Tct.Core.Forks
     Tct.Core.Processor
     Tct.Core.ProofTree
+    Tct.Core.SemiRing
     Tct.Core.Strategy
     Tct.Core.TctM
-    Tct.Error
-    Tct.Options
-    Tct.Parser
-    Tct.Pretty
     Tct.Processors.Combinators
-    Tct.SemiRing
-    Tct.Xml
   build-depends:
     ansi-wl-pprint       >= 0.6 && < 0.7,
     async                == 2.*,
