--- a/tct-core.cabal
+++ b/tct-core.cabal
@@ -1,4 +1,4 @@
-Name:               tct
+Name:               tct-core
 Version:            3.0.0
 Author:
   Martin Avanzini <martin.avanzini@uibk.ac.at>,
@@ -23,60 +23,14 @@ Description:
   for proving upper bounds on the derivational and runtime complexity
   of term rewriting systems automatically.
 
-cabal-version: >= 1.8
-build-type: Simple
-
---Executable tctw
---  hs-source-dirs: src-w
---  main-is: tctl.hs
---  build-depends:
---    containers           >= 0.5 && < 0.6,
---    optparse-applicative == 0.9.*,
---    mtl                  >= 2.1 && < 2.2,
---    base == 4.*,
---
---    smtlib == 0.*,
---    tct  == 3.*
---  ghc-options:
---    -j -threaded -Wall -O -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
---  extensions:
-
-Executable tctl
-  hs-source-dirs: src-main
-  main-is: Main.hs
-  build-depends:
-    containers     >= 0.5 && < 0.6,
-    mtl            >= 2.1 && < 2.2,
-    base           == 4.*,
-
-    smtlib         == 0.*,
-    term-rewriting == 0.*,
-    tct            == 3.*
-  ghc-options:
-    -j -threaded -Wall -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
-  extensions: 
-    ConstraintKinds,
-    DataKinds,
-    DeriveDataTypeable,
-    FlexibleInstances,
-    GeneralizedNewtypeDeriving,
-    MultiParamTypeClasses, 
-    TypeFamilies
-    -- GADTs, 
-    -- FlexibleContexts, 
-    -- TypeSynonymInstances,
-    -- DeriveDataTypeable,
-    -- DeriveFunctor, 
-    -- DeriveFoldable, 
-    -- DeriveTraversable
+Cabal-version: >= 1.8
+Build-type: Simple
 
 Library
   exposed-modules:
     Tct
     Tct.Combinators
-    Tct.Common.Arguments
     Tct.Common.Error
-    Tct.Common.Options
     Tct.Common.Parser
     Tct.Common.Pretty
     Tct.Common.SemiRing
@@ -91,6 +45,9 @@ Library
     Tct.Core.Strategy
     Tct.Core.TctM
     Tct.Core.Types
+    Tct.Main
+    Tct.Main.Mode
+    Tct.Main.Options
     Tct.Processors.Failing
     Tct.Processors.Timeout
   build-depends:
@@ -103,6 +60,7 @@ Library
     dyre                 == 0.8.*,
     filepath             == 1.3.*,
     mtl                  >= 2.1 && < 2.2,
+    transformers         == 0.3.*,
     old-time             == 1.1.*,
     optparse-applicative == 0.9.*,
     parsec               == 3.1.*,
@@ -119,7 +77,6 @@ Library
     DeriveFoldable, 
     DeriveFunctor, 
     DeriveTraversable,
-    EmptyDataDecls,
     FlexibleContexts, 
     FlexibleInstances, 
     GADTs, 
@@ -130,3 +87,4 @@ Library
     TypeFamilies,
     TypeOperators,
     TypeSynonymInstances
+
