--- a/tct-core.cabal
+++ b/tct-core.cabal
@@ -48,7 +48,7 @@ Library
     Tct.Core.Main
     Tct.Core.Main.Mode
     Tct.Core.Main.Options
-    Tct.Core.Processor.Failing
+    Tct.Core.Processor.Trivial
     Tct.Core.Processor.Timeout
   build-depends:
     ansi-wl-pprint       >= 0.6 && < 0.7,
