starting with xml output
behaviour of answer output is changed:
- standard output is fixed to competition format
- CustomAnswer is used to execute mode specific output

--- a/tct-core.cabal
+++ b/tct-core.cabal
@@ -36,6 +36,7 @@ Library
     Tct.Core.Common.SemiRing
     Tct.Core.Common.Xml
     Tct.Core.Data
+    Tct.Core.Data.Answer
     Tct.Core.Data.Certificate
     Tct.Core.Data.Declaration
     Tct.Core.Data.Declaration.Parse
