--- a/tct-core.cabal
+++ b/tct-core.cabal
@@ -49,6 +49,7 @@ Library
     Tct.Core.Main
     Tct.Core.Main.Mode
     Tct.Core.Main.Options
+    Tct.Core.Processor.Empty
     Tct.Core.Processor.Trivial
     Tct.Core.Processor.Timeout
   build-depends:
@@ -66,7 +67,7 @@ Library
     optparse-applicative == 0.9.*,
     parsec               == 3.1.*,
     text                 == 1.1.*,
-    xmlgen               >= 0.6 && < 0.7
+    hexpat               >= 0.20.7
     
   hs-source-dirs: src
   ghc-options:
