--- a/tct-core.cabal
+++ b/tct-core.cabal
@@ -51,10 +51,15 @@ Library
     Tct.Core.Main
     Tct.Core.Main.Mode
     Tct.Core.Main.Options
+    Tct.Core.Processor.Annotated
     Tct.Core.Processor.Assumption
+    Tct.Core.Processor.Cast
     Tct.Core.Processor.Empty
-    Tct.Core.Processor.Simple
+    Tct.Core.Processor.Failing
+    Tct.Core.Processor.Identity
+    Tct.Core.Processor.Succeeding
     Tct.Core.Processor.Timeout
+    Tct.Core.Processor.Transform
     Tct.Core.Processor.Wait
   build-depends:
     ansi-wl-pprint       >= 0.6 && < 0.7,
