--- a/tct-core.cabal
+++ b/tct-core.cabal
@@ -1,32 +1,25 @@
-Name:               tct-core
-Version:            3.0.0
-Author:
+name:          tct-core
+version:       3.0.0
+stability:     experimental
+author:
+  Martin Avanzini, Andreas Kochesser, Georg Moser, Michael Schaper, Maria Schett
+maintainer:
   Martin Avanzini <martin.avanzini@uibk.ac.at>,
   Andreas Kochesser <andreas.kochesser@uibk.ac.at>,
-  Georg Moser <georg.moser@uibk.ac.at>,
   Michael Schaper <michael.schaper@uibk.ac.at>,
   Maria Schett <maria.schett@uibk.ac.at>
-Maintainer:
-  Martin Avanzini <martin.avanzini@uibk.ac.at>,
-  Andreas Kochesser <andreas.kochesser@uibk.ac.at>,
-  Georg Moser <georg.moser@uibk.ac.at>,
-  Michael Schaper <michael.schaper@uibk.ac.at>,
-  Maria Schett <maria.schett@uibk.ac.at>
-Category: Program Analysis
-Stability: Experimental
-License: BSD3
-License-file: LICENSE
-Homepage: http://cl-informatik.uibk.ac.at/software/tct/
-Synopsis: A Complexity Analysis Framework
-Description:
+license:       BSD3
+license-file:  LICENSE
+category:      Program Analysis
+synopsis:      A Complexity Analysis Framework
+description:
   The Tyrolean Complexity Tool (TcT for short) is a tool for proving 
   resource bounds for different formal systems. This package provides 
   a general transformation framework.
+build-type:    Simple
+cabal-version: >= 1.8
 
-Cabal-version: >= 1.8
-Build-type: Simple
-
-Library
+library
   exposed-modules:
     Tct.Core
     Tct.Core.Combinators
