--- a/tct-core.cabal
+++ b/tct-core.cabal
@@ -19,6 +19,10 @@ description:
 build-type:    Simple
 cabal-version: >= 1.8
 
+source-repository head
+  type:     git
+  location: git://github.com/ComputationWithBoundedResources/tct-core
+
 library
   exposed-modules:
     Tct.Core
