--- a/tct-core.cabal
+++ b/tct-core.cabal
@@ -68,16 +68,15 @@ library
     containers           >= 0.5 && < 0.6,
     directory            == 1.2.*,
     dyre                 == 0.8.*,
-    filepath             == 1.3.*,
+    filepath             >= 1.3,
     mtl                  >= 2.1 && < 2.3,
-    transformers         == 0.3.*,
     old-time             == 1.1.*,
     optparse-applicative == 0.11.*,
     parsec               == 3.1.*,
     process              == 1.2.*,
     temporary            == 1.2.*,
     text                 == 1.2.*,
-    hexpat               >= 0.20.7
+    hexpat               == 0.20.*
     
   hs-source-dirs: src
   ghc-options:
