modify build options
The '-j' ghc build options is unrecognised in newer versions.

--- a/tct-core.cabal
+++ b/tct-core.cabal
@@ -80,7 +80,7 @@ library
     
   hs-source-dirs: src
   ghc-options:
-    -j -Wall -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
+    -Wall -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
   extensions: 
     ConstraintKinds, 
     DataKinds,
