--- a/.travis.yml
+++ b/.travis.yml
@@ -6,25 +6,22 @@ cache:
   directories:
   - $HOME/.stack/
 
+addons:
+  apt:
+    sources:
+    - hvr-ghc
+    packages:
+    - ghc-7.8.4
+    - ghc-7.10.2
+
 matrix:
   fast_finish: true
   include:
-  - env: GHCVER=7.8.4 STACK_YAML=stack.yaml
-    addons:
-      apt:
-        sources:
-        - hvr-ghc
-        packages:
-        - ghc-7.8.4
-  - env: GHCVER=7.10.2 STACK_YAML=stack-7.10.yaml
-    addons:
-      apt:
-        sources:
-        - hvr-ghc
-        packages:
-        - ghc-7.10.2
-        - libgmp-dev
-
+    - env: GHCVER=7.8.4 STACK_YAML=stack.yaml
+    - env: GHCVER=7.10.2 STACK_YAML=stack-7.10.yaml
+    - env: GHCVER=7.10.2 STACK_YAML=stack-dev.yaml
+  allo_failures:
+    - env: GHCVER=7.10.2 STACK_YAML=stack-dev.yaml
 
 before_install:
   - mkdir -p ~/.local/bin
