--- a/stack-7.10.yaml
+++ b/stack-7.10.yaml
@@ -3,7 +3,7 @@ packages:
 - '.'
 
 - location:
-    git: git@github.com:ComputationWithBoundedResources/slogic
+    git: https://github.com/ComputationWithBoundedResources/slogic
     commit: 1f9c923a4d55ea700aa98a83d99836a3c419385b
 
 extra-deps:
