--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,8 @@ before_install:
   - travis_retry curl -L https://github.com/commercialhaskell/stack/releases/download/v0.1.4.0/stack-0.1.4.0-x86_64-linux.tar.gz | tar xz -C ~/.local/bin
   - export PATH=/opt/ghc/$GHCVER/bin:$PATH
   # to test the head version
-  - git clone https://github.com/ComputationWithBoundedResources/slogic
+  - git clone https://github.com/ComputationWithBoundedResources/slogic ../slogic
+
 
 script:
   - stack --no-terminal --skip-ghc-check build
