--- a/tct-core.cabal
+++ b/tct-core.cabal
@@ -56,6 +56,7 @@ library
     base                 == 4.*,
     bytestring           == 0.10.*,
     containers           >= 0.5 && < 0.6,
+    directory            == 1.2.*,
     mtl                  >= 2.1 && < 2.3,
     old-time             == 1.1.*,
     optparse-applicative == 0.11.*,
