--- a/tct-core.cabal
+++ b/tct-core.cabal
@@ -1,13 +1,11 @@
 name:          tct-core
-version:       3.2.0
+version:       3.3.0
 stability:     experimental
 author:
-  Martin Avanzini, Andreas Kochesser, Georg Moser, Michael Schaper, Maria Schett
+  Martin Avanzini, Michael Schaper, Manuel Schneckenreither, Georg Moser, Andreas Kochesser, Maria Schett
 maintainer:
   Martin Avanzini <martin.avanzini@uibk.ac.at>,
-  Andreas Kochesser <andreas.kochesser@uibk.ac.at>,
-  Michael Schaper <michael.schaper@uibk.ac.at>,
-  Maria Schett <maria.schett@uibk.ac.at>
+  Michael Schaper <michael.schaper@student.uibk.ac.at>,
 license:       BSD3
 license-file:  LICENSE
 category:      Program Analysis
@@ -52,24 +50,24 @@ library
     Tct.Core.Processor.MSum
     Tct.Core.Processor.Transform
   build-depends:
-    ansi-wl-pprint       >= 0.6 && < 0.7,
-    async                >= 2.0,
-    base                 == 4.*,
-    bytestring           == 0.10.*,
-    containers           >= 0.5 && < 0.6,
-    directory            >= 1.2,
-    mtl                  >= 2.1 && < 2.3,
-    old-time             >= 1.1.0,
-    optparse-applicative >= 0.12.0,
-    parsec               >= 3.1.0,
-    process              >= 1.2.0,
-    temporary            >= 1.2.0,
-    text                 >= 1.2.0,
-    hexpat               >= 0.20.0
+    base >=4.7 && <5,
+    ansi-wl-pprint,
+    async,
+    bytestring,
+    containers,
+    directory,
+    mtl,
+    old-time,
+    optparse-applicative,
+    parsec,
+    process,
+    temporary,
+    text,
+    hexpat
 
   hs-source-dirs: src
   ghc-options:
-    -Wall -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
+    -Wall -Wcompat -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
   extensions:
     ConstraintKinds,
     DataKinds,
